components/kustomizations/stackend/VERSION/base/stackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: stackend
  name: stackend
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: stackend
  type: ClusterIP
