components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: stackend
                port:
                  number: 8000
          - path: /organizations
            pathType: Prefix
            backend:
              service:
                name: stackend
                port:
                  number: 8000
          - path: /roles
            pathType: Prefix
            backend:
              service:
                name: stackend
                port:
                  number: 8000
